Improved display of external data slightly.  It's a stopgap until I can do it properly.  Added documentation to BodinExternal.js.

--- a/Bodin.css
+++ b/Bodin.css
@@ -360,7 +360,7 @@ body,html {
 .bodin .token {
     cursor: pointer;
 }
-.bodin .aligned {
+.bodin .align {
     margin: 0;
     padding: 0;
     -moz-transition: all .25s ease-in;
@@ -411,7 +411,9 @@ body,html {
     text-align: right;
     color: #666;
 }
-
+.bodin .nav li {
+	margin-bottom: 20px;
+}
 #tooltipper {
     text-align: center;
     color: #fff;
@@ -452,7 +454,6 @@ body,html {
 .rend-italic {
     font-style: italic;
 }
-
 /**
  * These are provisional ... Adam will make it better
  */
@@ -460,10 +461,18 @@ body,html {
     text-decoration: underline;
     color: blue;
 }
-
-
 #external_annotation {
-    position: fixed;
+	box-sizing: border-box;
+	padding: 100px 50px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 50%;
+	display: none;
+	background-color: #EEE;
+	overflow: scroll;
+/*    position: fixed;
     top: 10px;
     left: 10px;
     height: 400px;
@@ -472,4 +481,5 @@ body,html {
     background-color: white;
     color: black;
     overflow: scroll;
+*/
 }
