--- a/src/css/bodin.css
+++ b/src/css/bodin.css
@@ -146,7 +146,17 @@ body,html {
     color: blue;
 }
 #external_annotation {
-    position: fixed;
+	box-sizing: border-box;
+	padding: 100px 50px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 50%;
+	display: none;
+	background-color: #EEE;
+	overflow: scroll;
+/*    position: fixed;
     top: 10px;
     left: 10px;
     height: 400px;
@@ -155,4 +165,5 @@ body,html {
     background-color: white;
     color: black;
     overflow: scroll;
+*/
 }
